Added: oembed wrapper

--- a/assets/scss/croco-school-frontend.scss
+++ b/assets/scss/croco-school-frontend.scss
@@ -1135,3 +1135,30 @@ $transparentDarker: rgba(0, 8, 16, 0.24);
 		text-decoration: none;
 
 }
+
+.croco-school-embed-responsive {
+	position: relative;
+	display: block;
+	padding: 0;
+
+	iframe,
+	embed,
+	object {
+		position: absolute;
+		top: 0;
+		left: 0;
+		bottom: 0;
+		height: 100%;
+		width: 100%;
+		border: 0;
+	}
+
+	// Modifier class for 16:9 aspect ratio
+	&.croco-school-embed-responsive-16by9 {
+		padding-bottom: 56.25%;
+	}
+
+	&.croco-school-embed-responsive-4by3 {
+		padding-bottom: 75%;
+	}
+}
