--- a/assets/scss/croco-school-frontend.scss
+++ b/assets/scss/croco-school-frontend.scss
@@ -1148,6 +1148,7 @@ $transparentDarker: rgba(0, 8, 16, 0.24);
 	position: relative;
 	display: block;
 	padding: 0;
+	margin-bottom: 30px;
 
 	iframe,
 	embed,
