Added: sharing buttons

--- a/assets/scss/croco-school-frontend.scss
+++ b/assets/scss/croco-school-frontend.scss
@@ -7,6 +7,9 @@
 @import "addons/croco-school-article-categories";
 @import "addons/croco-school-articles-archive";
 
+// Modules
+@import "modules/sharing";
+
 .site-content  .croco-school h1 {
 	font-weight: 900;
 	font-size: 40px;
