FIX: html structure

--- a/assets/scss/addons/_croco-school-articles-archive.scss
+++ b/assets/scss/addons/_croco-school-articles-archive.scss
@@ -1,6 +1,6 @@
 .cs-articles-archive {
-
-	&__main-title {
+	
+	.cs-articles-archive__main-title {
 		margin: 0;
 		font-weight: 900;
 		font-size: 40px;
